# marker-pdf-agent

./: .flake8  .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
marker_pdf_agent/: __init__.py  tray.py  worker.py
tests/: test_worker.py
