[project]
name = "marker-pdf-agent"
version = "0.1.0"
description = "Background worker that watches a folder, converts documents with marker-pdf, and routes markdown outputs."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
marker-pdf-agent = "marker_pdf_agent.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
