[project]
name = "marker-pdf-agent"
version = "0.1.0"
description = "Background worker that watches a folder, converts documents with marker-pdf, and routes markdown outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"marker-pdf>=1.8.0",
]

[project.optional-dependencies]
gui = [
	"PySide6>=6.7",
	"pyobjc-framework-Cocoa>=10; platform_system == 'Darwin'",
]
dev = [
	"build>=1.3.0",
	"pytest>=8.4.0",
]

[project.scripts]
marker-pdf-agent = "marker_pdf_agent.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["marker_pdf_agent*"]

[tool.pytest.ini_options]
markers = [
	"live_ollama: tests that call the local Ollama CLI and require an installed model",
]
