[project]
name = "marker-pdf-agent"
version = "0.1.0"
description = "Background worker that watches a folder, converts documents with marker-pdf, and routes markdown outputs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
	{name = "Roberto Rossi"},
]
keywords = ["documents", "markdown", "pdf", "marker-pdf", "ollama", "tray"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Environment :: MacOS X",
	"Intended Audience :: End Users/Desktop",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Office/Business",
	"Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
	"marker-pdf>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/robertorossi/marker-pdf-agent"
Repository = "https://github.com/robertorossi/marker-pdf-agent"
Issues = "https://github.com/robertorossi/marker-pdf-agent/issues"

[project.optional-dependencies]
gui = [
	"PySide6>=6.7",
	"pyobjc-framework-Cocoa>=10; platform_system == 'Darwin'",
]
dev = [
	"black>=25.0.0",
	"build>=1.3.0",
	"flake8>=7.0.0",
	"mypy>=1.0.0",
	"pytest>=8.4.0",
	"ruff>=0.8.0",
]

[project.scripts]
marker-pdf-agent = "marker_pdf_agent.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["marker_pdf_agent*"]

[tool.setuptools.package-data]
marker_pdf_agent = ["assets/*.svg"]

[tool.pytest.ini_options]
markers = [
	"live_ollama: tests that call the local Ollama CLI and require an installed model",
]

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
/(\.git|\.mypy_cache|\.pytest_cache|\.ruff_cache|\.venv|build|dist|htmlcov|marker_pdf_agent\.egg-info|venv)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
	".git",
	".mypy_cache",
	".pytest_cache",
	".ruff_cache",
	".venv",
	"build",
	"dist",
	"htmlcov",
	"marker_pdf_agent.egg-info",
	"venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.flake8]
max-line-length = 120
extend-exclude = [
	".git",
	".mypy_cache",
	".pytest_cache",
	".ruff_cache",
	".venv",
	"build",
	"dist",
	"htmlcov",
	"marker_pdf_agent.egg-info",
	"venv",
]

[tool.mypy]
python_version = "3.10"
files = ["marker_pdf_agent", "tests"]
exclude = "^(venv|\\.venv|build|dist|marker_pdf_agent\\.egg-info|\\.pytest_cache|\\.mypy_cache|\\.ruff_cache)/"
ignore_missing_imports = true
no_site_packages = true
